--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@t3-oss/env-nextjs": "^0.12.0",
-    "@upstash/redis": "^1.34.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.39.0",
     "ioredis": "^5.4.2",
+    "jose": "^6.0.10",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "pg": "^8.13.1",
